// =====================================================
// dbdiagram.io 임포트용 DBML
// 병원 진료기록 조회 시스템 (hospital-record-viewer)
// =====================================================

Table users {
  id         uuid        [pk, note: 'Supabase Auth 자동 생성']
  email      varchar(255) [unique, not null]
  created_at timestamptz [default: `now()`]

  note: 'Supabase Auth 관리 — 직접 수정 불가'
}

Enum user_role {
  patient
  doctor
  admin
}

Enum access_action {
  view_list
  view_detail
}

Table user_profiles {
  user_id              uuid        [pk, ref: > users.id]
  role                 user_role   [not null]
  name                 varchar(100) [not null]
  must_change_password boolean     [default: false]
  is_active            boolean     [default: true]
  updated_at           timestamptz [default: `now()`]
}

Table departments {
  id         uuid        [pk, default: `uuid_generate_v4()`]
  name       varchar(50) [unique, not null, note: '내과, 외과, 소아과 등']
  is_active  boolean     [default: true]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Table doctors {
  id             uuid        [pk, default: `uuid_generate_v4()`]
  user_id        uuid        [unique, not null, ref: > users.id]
  department_id  uuid        [not null, ref: > departments.id]
  license_number varchar(50) [not null]
}

Table patients {
  id         uuid        [pk, default: `uuid_generate_v4()`]
  user_id    uuid        [unique, not null, ref: > users.id]
  birth_date date        [not null]
  phone      varchar(20) [not null]
}

Table medical_records {
  id              uuid        [pk, default: `uuid_generate_v4()`]
  doctor_id       uuid        [not null, ref: > doctors.id]
  patient_id      uuid        [not null, ref: > patients.id]
  visited_at      timestamptz [not null, note: '수정 불가']
  chief_complaint text
  diagnosis       text        [not null]
  prescription    text
  is_corrected    boolean     [default: false]
  correction_note text
  corrected_at    timestamptz
  created_at      timestamptz [default: `now()`]

  note: '삭제 불가. 오기입 시 is_corrected=true 후 새 기록 작성'
}

Table access_logs {
  id         uuid        [pk, default: `uuid_generate_v4()`]
  user_id    uuid        [not null, ref: > users.id]
  record_id  uuid        [ref: > medical_records.id, note: 'NULL = 목록 조회']
  action     access_action [not null]
  ip_address inet
  created_at timestamptz [default: `now()`]

  note: 'Append-only. 수정/삭제 불가'
}
